feature: New DTO for task response